--- a/_config.yml
+++ b/_config.yml
@@ -18,20 +18,29 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: PK's blog
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+  PK's blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 7thking
 github_username:  prashantkamdar
 
 # Build settings
-theme: minima
-plugins:
-  - jekyll-feed
+theme: texture
+
+texture:
+  title: Hi, I'm Prashant
+  date_format: "%b %-d, %Y"
+  style: black
+  showNav: true
+
+  social_links:
+    twitter: 7thking
+    github:  prashantkamdar
+    #linkedIn: in/thelehhman # format: locale/username
+#plugins:
+  #- jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
