--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,13 @@
 title: PK's blog
 description: >- # this means to ignore newlines until "baseurl:"
   PK's blog
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://prashantkamdar.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 7thking
 github_username:  prashantkamdar
 
 # Build settings
-theme: texture
+theme: minima
 
 texture:
   title: Hi, I'm Prashant
