--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: PK's blog
+title: 7thking's blog
 description: >- # this means to ignore newlines until "baseurl:"
-  PK's blog
-baseurl: "" # the subpath of your site, e.g. /blog
+  
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "http://prashantkamdar.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 7thking
 github_username:  prashantkamdar
